* Sep 3 2001 hship

framework:
- Add Body.includeScript()
- Add PracticalBrowserSniffer.js
- Simplify image preloading in Body component
- Add Body.process(ScriptSession)
- Add the <include-script> element to the Tapestry Script DTD
- Add IncludedScript token type
- First, broken, attempt to get ShowInspector component to work with Navigator 6

contrib:
- Split Palette.script into two pieces, moving the static functions
  into PaletteFunctions.js.
- Kludge partial support for using Palette with Navigator 6
  
* Aug 31 2001 hship

framework:
- Replace the ShowInspector rollover with a Flash animation
- Make the ShowInspector glue itself to the lower right corner of the window
- Change the background color of the Inspector page

* Aug 30 2001 hship

doc:
- More improvements to Designer's Guide, including UML diagrams

* Aug 28 2001 hship

- Don't build or ship the junit code

framework:
- Add IComponent.getBindings()
- Rename registerForEvents() to the more generic, finishLoad()
- Add Default helper bean
- Cleanup a number of Javadoc errors
- Reorganize IForm vs. Form (moving key methods to the IForm interface)
- Change IFormComponent to expose an IForm property (not a Form property)

contrib:
- Change the Palette component to use the new Default helper bean

vlib:
- Rename registerForEvents() to the more generic, finishLoad()

doc:
- Rename registerForEvents() to the more generic, finishLoad()

tutorial:
- Made use of ValidationDelegate and Default helper beans in the valid tutorial

* Aug 27 2001 hship

vlibbeans:
- Implement locked-out functionality
- Implement Book.dateAdded and Person.lastAccess

vlib:
- Look and feel improvements
- Visually identify new books (where Book.dateAdded >= Person.lastAccess, for the logged in user)

* Aug 27 2001 hship

doc:
- Get the Developer's Guide up-to date with respect to yesterday's
  changes

* Aug 26 2001 hship

framework:
- Add initial support for configuring properties of helper beans